data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2103.wast
;; Test 4: Construct a block with a single loop where `br_if 0` should break out of the loop. The block type specifies an `i32` result, which is not produced due to incorrect operand stack management. Check if WebAssembly correctly resolves the break and produces the expected result, while `wizard_engine` falls into an infinite loop.

(assert_invalid
  (module (func $block-loop-br_if (result i32)
    (block (result i32)
      (loop (result i32)
        (br_if 0 (i32.const 1))
      )
    )
    (i32.const 1)
  ))
  "type mismatch"
)